about us gap fix

--- a/Optra Seven/css/shihab.css
+++ b/Optra Seven/css/shihab.css
@@ -1367,8 +1367,7 @@
 
 .o7-section-header__sub-title--small {
     font-size: 24px;
-    margin-top: 20px;
-    margin-bottom: 0;
+    font-weight: 500;
 }
 
 /* Section Title Block END */
@@ -1410,6 +1409,7 @@
 }
 
 .o7-our-culture__image-wrapper {
+    max-width: 50%;
     position: relative;
     flex: 1;
 }
@@ -1420,7 +1420,7 @@
 
 .o7-qoute-button-chip {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     right: 0;
 }
 
@@ -1435,6 +1435,7 @@
     rotate: 90deg;
     position: relative;
     top: 60px;
+    right: -1px;
     fill: #f5f5f5;
 }
 
@@ -1450,6 +1451,7 @@
     transform: scaleX(-1);
     position: relative;
     left: 243px;
+    bottom: -1px;
     fill: #f5f5f5;
 }
 
@@ -1458,12 +1460,12 @@
     width: 260px;
     height: 60px;
     background-color: #f5f5f5;
-    border-radius: 25px 0 25px 0;
+    border-radius: 25px 0 0 0;
 }
 
 .o7-quote__button {
     position: absolute;
-    top: 27px;
+    top: 28px;
     right: 0;
 }
 
@@ -1474,7 +1476,7 @@
 .o7-our-culture-image-chip {
     position: absolute;
     bottom: -1px;
-    right: 0;
+    right: -1px;
 }
 
 .o7-our-culture-image-chip__bg {
@@ -1487,7 +1489,8 @@
     height: 17px;
     rotate: 90deg;
     position: relative;
-    top: 90px;
+    top: 89px;
+    right: -1px;
     fill: #f5f5f5;
 }
 
@@ -1502,7 +1505,8 @@
     height: 17px;
     transform: scaleX(-1);
     position: relative;
-    left: 101px;
+    left: 102px;
+    bottom: -1px;
     fill: #f5f5f5;
 }
 
@@ -1682,13 +1686,17 @@
     .o7-quote__text {
         font-size: 22px;
     }
+
+    .o7-our-culture__image-wrapper {
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 767px) {
 
     .o7-our-journey-container {
         flex-direction: column;
-        padding: 20px 15px;
+        padding: 24px;
         gap: 10px;
     }
 
@@ -1712,7 +1720,7 @@
 
     .o7-card {
         max-width: 100%;
-        padding: 15px 10px;
+        padding: 15px 35px;
         flex-direction: row-reverse;
         gap: 20px;
     }
